add linux driver and downgrade to java 8